Ran and applied PMD code checks